Container spacing fixes

--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -33,8 +33,9 @@ h3.subheadline {
 }
 
 h2.time_expectation{
-  font-weight: 500;
+  font-weight: 700;
   text-align: center;
+  color:#3498DB;
 }
 
 p.step_headline{
@@ -70,11 +71,12 @@ p.step_headline{
   color:#ffffff;
 }
 
+
 .about_the_service, .privacy_description {
   background-color: #ECF0F1;
   p, h2 {
     text-align: left;
-    max-width: 48rem;
+    max-width: 72rem;
   }
 }
 
@@ -98,6 +100,10 @@ p.step_headline{
 
 .privacy_description ul{
   list-style-type: circle;
+}
+
+.journey_steps{
+  padding-bottom: 40px;
 }
 
 
